@@ -20,7 +20,6 @@ Things still needing to be done for the BETA release:
 		network mounts into the fstab
 		
 	gli-dialog: 
-		fix install-packages unchecking/grp
 		distcc support
 	gtkFE:
 		listed in fe/gtk/TODO
