@@ -1,10 +1,16 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.380 2005/09/17 03:45:35 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.381 2005/09/17 21:15:59 codeman Exp $
 
 *GLI-0.2 (4 Aug 2005)
 
+  17 Sep 2005; Preston Cody <codeman@gentoo.org>
+  src/gli-dialog.py:  added set_distcc to the list
+  GenDialog: added set_distcc. untested.
+  IP: added install_distcc flag.
+  AT: added install_distcc function based on the flag. runs after build_kernel
+  
   16 Sep 2005; Andrew Gaffney <agaffney@gentoo.org>
   src/GLIUtility.py:
   add rot13ify() function
